--- a/css/information.css
+++ b/css/information.css
@@ -6,12 +6,32 @@
   height: 100%;
   width: 300px;
   background: #333;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
   overflow: hidden;
   z-index:1001;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
 }
 
 #interface > h4{
   text-align: center;
   color: #fff;
+}
+
+#attr{
+  position: absolute;;
+  color: white;
+  height: 100px;
+  width: 200px;
+  padding: 10px;
+  left: 0;
+  bottom: 0;
+  z-index: 1010;
+  background: #333;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
+}
+
+td{
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
