--- a/css/information.css
+++ b/css/information.css
@@ -3,8 +3,8 @@
   margin:0;
   top:0;
   left:0;
-  height: 100%;
-  width: 100%;
+  height: 0;
+  width: 0;
   background: #333;
   box-shadow: 0 1px 5px rgba(0,0,0,0.4);
   overflow: hidden;
