--- a/css/map.css
+++ b/css/map.css
@@ -1,7 +1,8 @@
 #map{
-  height: 100%;
   width: 100%;
-  margin: 0;
+  height: 100%;
+  margin:0;
+  padding:0;
 }
 
 /* We're using !important to overwrite basic leaflet styles here */
