--- a/css/general.css
+++ b/css/general.css
@@ -9,10 +9,20 @@ html, body{
   margin:0;
 }
 
-.container-fluid{
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+#map{
+  width: 100%;
+  height: 100%;
+  margin:0;
+  padding:0;
 }
+
+/* We're using !important to overwrite basic leaflet styles here */
+.leaflet-control-layers{
+  background: #333 !important;
+  color: #fff !important;
+  border-radius: 0 !important ;
+}
+
 
 .spinner {
   position: absolute;
