--- a/css/information.css
+++ b/css/information.css
@@ -35,8 +35,17 @@ td{
   padding-right: 10px;
   padding-top: 4px;
   padding-bottom: 4px;
-  border: 1px solid #666;
   min-width: 70px;
+}
+
+#objTable{
+  margin-top: 20px;
+  max-width: 200px !important;
+}
+
+.table-remove{
+  min-width: 10px;
+  width: 10px;
 }
 
 .boolean{
@@ -45,4 +54,9 @@ td{
 
 .number{
   color: rgb(27, 171, 224);
+}
+
+.leaflet-popup-content-wrapper, .leaflet-popup-tip{
+  background: #333 !important;
+  color: #fff !important;
 }
