--- a/css/table.css
+++ b/css/table.css
@@ -45,3 +45,43 @@
   left: 40px;
   top: 0;
 }
+
+#attr{
+  position: absolute;
+  color: white;
+  height: 100px;
+  width: 300px;
+  padding: 10px;
+  left: 100px;
+  bottom: 300px;
+  padding-left: 50px;
+  z-index: 1010;
+  background: #333;
+  border-top: 1px solid black;
+}
+
+td{
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  min-width: 70px;
+}
+
+#objTable{
+  margin-top: 20px;
+  max-width: 200px !important;
+}
+
+.table-remove{
+  min-width: 10px;
+  width: 10px;
+}
+
+.boolean{
+  color: rgb(236, 215, 52);
+}
+
+.number{
+  color: rgb(27, 171, 224);
+}
