--- a/css/general.css
+++ b/css/general.css
@@ -15,9 +15,11 @@ height:100%;
 }
 
 #input{
-  width: 260px;
+  max-width: 500px;
+  min-width: 300px;
+  width: 20%;
   text-align: center;
-  float:left;
+  float: right;
   min-height:100%;
   background:#252830;
   color: #fff;
@@ -25,11 +27,16 @@ height:100%;
   z-index: 1000;
 }
 
-#map {
+.main{
+  /*margin-top: -30px;
+  padding-top: 30px;*/
   position: relative;
-  min-height:100%;
- }
+  z-index: 9001;
+}
 
+.logo{
+  display: none;
+}
 
 .logo > img{
   position: relative;
@@ -39,6 +46,52 @@ height:100%;
   margin-right: 20px;
   margin-top: 30px;
   margin-bottom: 10px;
+}
+
+#map {
+  position: relative;
+  min-height:100%;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.4);
+ }
+
+ #menu{
+   background: #1f2025;
+   height: 40px;
+ }
+
+.menu-item{
+  box-shadow: 0 2px 5px rgba(0,0,0,0.4);
+  height: 30px;
+  margin-top: 10px;
+  width: 80px;
+  bottom: 0;
+  background: #252830;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+  margin-left: 2px;
+  margin-right: 2px;
+  transition: all .05s ease-in-out;
+  -moz-transition: all .05s ease-in-out;
+  -webkit-transition: all .05s;
+}
+
+.menu-selected{
+  background: #1bc98e;
+}
+
+.menu-selected:hover{
+  background: #1bc98e !important;
+}
+
+.menu-item:hover{
+  background: #10986a;
+}
+
+.menu-item > p{
+  margin: 0;
+  margin-top: 4px;
 }
 
 #editButtons{
@@ -189,4 +242,5 @@ height:100%;
 
 .idTag{
   margin-top: 30px;
+  color: #888;
 }
