--- a/css/general.css
+++ b/css/general.css
@@ -10,26 +10,56 @@ html, body{
 }
 
 #interface{
-height:100%;
+  width: 100%;
+  height:100%;
   overflow:hidden;
+  background:#252830;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 #input{
-  max-width: 500px;
-  min-width: 300px;
-  width: 20%;
+  z-index: 901;
+  width: 300px;
+  min-height: 100%;
   text-align: center;
-  float: right;
-  min-height:100%;
-  background:#252830;
   color: #fff;
   box-shadow: 0 1px 5px rgba(0,0,0,0.4);
-  z-index: 1000;
+  text-align: center;
+  background:#252830;
+  color: #fff;
+}
+
+#map {
+  flex: 1;
+  min-height: 100%;
+  background:#fff;
+ }
+
+#openHide{
+  position: absolute;
+  top: 50%;
+  right: 270px;
+  cursor: pointer;
+  border-radius: 50%;
+  height: 60px;
+  width: 60px;
+  color: white;
+  opacity: 0.75;
+  background: #252830;
+  z-index: 900;
+}
+
+#openHide:hover{
+  background: #434857;
+}
+
+#openHide > i {
+  margin-top: 21px;
+  margin-left: 12px;
 }
 
 .main{
-  /*margin-top: -30px;
-  padding-top: 30px;*/
   position: relative;
   z-index: 9001;
 }
@@ -47,12 +77,6 @@ height:100%;
   margin-top: 30px;
   margin-bottom: 10px;
 }
-
-#map {
-  position: relative;
-  min-height:100%;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.4);
- }
 
  #menu{
    background: #1f2025;
